; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_bstr.c_bstr_find.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_bstr.c_bstr_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bstr_find(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bstr, align 4
  %5 = alloca %struct.bstr, align 4
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.bstr, %struct.bstr* %4, i32 0, i32 0
  store i32 %0, i32* %7, align 4
  %8 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  store i32 %1, i32* %8, align 4
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %28, %2
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds %struct.bstr, %struct.bstr* %4, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp slt i32 %10, %12
  br i1 %13, label %14, label %31

14:                                               ; preds = %9
  %15 = load i32, i32* %6, align 4
  %16 = getelementptr inbounds %struct.bstr, %struct.bstr* %4, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.bstr, %struct.bstr* %4, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @bstr_splice(i32 %19, i32 %15, i32 %17)
  %21 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @bstr_startswith(i32 %20, i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %14
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* %3, align 4
  br label %32

27:                                               ; preds = %14
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %6, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %6, align 4
  br label %9

31:                                               ; preds = %9
  store i32 -1, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %25
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @bstr_startswith(i32, i32) #1

declare dso_local i32 @bstr_splice(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
